# duckdb-cloudflare

./: .gitignore  CLAUDE.md  CMakeLists.txt  D1-ATTACH-PROBLEM.md  D1-ATTACH-SOLUTION.md  D1-USAGE-EXAMPLE.md  README.md  archive-org.sql  description.yml  devenv.nix  extension_config.cmake  test.sql  test_count_200.sql  test_filter_302.sql  test_no_filter.sql  test_predicate.sql  test_timestamp.sql  test_verify_pushdown.sql  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  scheduled-1.5.yml
docs/: CLOUDFLARE-CREDENTIALS.md
src/: cloudflare_extension.cpp  common_crawl_extension.cpp  common_crawl_index.cpp  common_crawl_utils.cpp  d1_attach.cpp  d1_functions.cpp  d1_http.cpp  d1_scan.cpp  d1_secret.cpp  d1_storage.cpp  internet_archive.cpp  r2_functions.cpp  r2_http.cpp  r2_secret.cpp  web_archive_cdx_extension.cpp  web_archive_cdx_utils.cpp  web_archive_extension.cpp  web_archive_utils.cpp
src/include/: cloudflare_extension.hpp  common_crawl_utils.hpp  d1_extension.hpp  r2_extension.hpp  web_archive_cdx_extension.hpp  web_archive_cdx_utils.hpp
src/include/storage/: d1_storage.hpp  d1_transaction.hpp
src/storage/: d1_transaction.cpp  d1_transaction_manager.cpp
test/sql/: common_crawl.test  common_crawl_basic.test  common_crawl_errors.test  common_crawl_filters.test  common_crawl_integration.test  common_crawl_limit.test  common_crawl_parameters.test  common_crawl_structs.test  internet_archive_basic.test  internet_archive_fast_latest.test  internet_archive_pushdown.test
